<resources>
    <string name="app_name">EquineApp</string>

    <!-- prompts -->
    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Teléfono</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_rep_new_password">Repita la nueva contraseña</string>


    <!-- strings related to auth -->
    <string name="action_google">Continuar con Google</string>
    <string name="action_facebook">Continuar con Facebook</string>
    <string name="action_appple">Continuar con Apple</string>
    <string name="action_email">Continuar con Email</string>
    <string name="register">¡Regístrate!</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_sign_up">Crear Cuenta</string>
    <string name="lost_password">¿Olvidaste tu contraseña?</string>
    <string name="accept_register">Al continuar, está indicando que acepta nuestros Términos y Política de Privacidad.</string>

    <!-- strings related to nav -->
    <string name="back_nav">Regresar</string>
    <string name="home_nav">Inicio</string>
    <string name="appointments_nav">Citas</string>
    <string name="account_nav">Perfil</string>

    <!-- strings related to appointment and medical history -->
    <string name="name_horse">Nombre del caballo</string>
    <string name="name_owner">Nombre del dueño</string>
    <string name="adress_owner">Dirección de residencia</string>
    <string name="phone_owner">Numero de telefono</string>
    <string name="motive">Motivo de consulta</string>
    <string name="age">Edad del caballo</string>
    <string name="email">correo electronico</string>
    <string name="description">Descripción fisica del caballo</string>


    <!-- strings related to s -->
    <string name="adopcion">Adopción</string>
    <string name="perdido">Perdido</string>
    <string name="mis_publicaciones">Mis Publicaciones</string>
    <string name="add_publication">Añadir publicación</string>
    <string name="addpublication">addPublication</string>
    <string name="action_edit_publication">Editar</string>
    <string name="action_delete_publication">Eliminar</string>
    <string name="filter">Filtrar</string>
    <string name="type">textType</string>
    <string name="gender_spinner">genderSpinner</string>
    <string name="vaccinated_spinner">vaccinatedSpinner</string>

    <!-- strings related to profile -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Perfil</string>
    <string name="content">Contenido</string>
    <string name="appointments">Centro de citas</string>
    <string name="histories">Historias clínicas</string>
    <string name="user">Usuario</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="support">Ayuda</string>
    <string name="questions">Preguntas frecuentes</string>
    <string name="chat">Chat en línea</string>
    <string name="contact">Contáctanos</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="save">Guardar</string>

    <!-- strings related to help -->
    <string name="help">Centro de ayuda</string>
    <string name="help1">¿Cómo creo una historia clínica?</string>
    <string name="help1.1">Desde la pantalla de inicio, en la parte superior hacer clic en el boton que dice "Agendar historia clínica".</string>
    <string name="help2">¿Cómo agendo una cita?</string>
    <string name="help2.1">Desde la pantalla de inicio, en la parte superior hacer clic en el boton que dice "Crear historia clínica".</string>
    <string name="help3">¿Cómo cancelo una cita?</string>
    <string name="help3.1">Desde la pantalla de perfil, en la parte superior hacer clic en la opción que dice "Centro de citas", busca la cita que quieres cancelar y dale al boton de cancelar.</string>

</resources>