<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.appointment.MedicalHistoryFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="@string/description">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Nombre caballo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtn" />

        <EditText
            android:id="@+id/editTextTextHorseName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:text="@string/name_horse"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Nombre del dueño"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextHorseName" />

        <EditText
            android:id="@+id/editTextTextOwnerName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/name_owner"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Dirección "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextOwnerName" />

        <EditText
            android:id="@+id/editTextTextAddress"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/adress_owner"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Correo electronico"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPhoneNumber" />

        <EditText
            android:id="@+id/editTextemail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/email"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="75dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Edad del caballo"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editTextemail" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Descripción del caballo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextemail" />

        <EditText
            android:id="@+id/editTextTextHorseAge"
            android:layout_width="176dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:text="@string/age"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <Button
            android:id="@+id/saveBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/brown_dark"
            android:fontFamily="@font/roboto_bold"
            android:text="Guardar"
            android:theme="@style/Theme.AppCompat"
            app:iconTint="@color/brown_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="Numero de telefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextAddress" />

        <EditText
            android:id="@+id/editTextTextPhoneNumber"
            android:layout_width="332dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/phone_owner"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="186dp"
            android:layout_height="96dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toEndOf="@+id/editTextTextHorseAge"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageButton
            android:id="@+id/backButtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>