<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#93D6F4"
    tools:context=".view.appointments.AppointmentFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="150dp"
            android:hint="@string/label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton">

            <AutoCompleteTextView
                android:id="@+id/complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Dirección "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu" />

        <EditText
            android:id="@+id/editTextTextAddress"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/adress_owner"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Motivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPhoneNumber" />

        <EditText
            android:id="@+id/editTextTextMotive"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/motive"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextTextDate"
            android:layout_width="167dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="75dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Hora de consulta"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMotive" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="75dp"
            android:fontFamily="@font/roboto_regular"
            android:text="Fecha de consulta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMotive" />

        <EditText
            android:id="@+id/editTextTextHour"
            android:layout_width="176dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextDate"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:text="HH/MM" />


        <Button
            android:id="@+id/saveBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:backgroundTint="@color/brown_dark"
            android:fontFamily="@font/roboto_bold"
            android:text="Agendar"
            android:theme="@style/Theme.AppCompat"
            app:iconTint="@color/brown_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextDate" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="Numero de telefono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextAddress" />

        <EditText
            android:id="@+id/editTextTextPhoneNumber"
            android:layout_width="332dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:background="@drawable/border_fill_blue"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/phone_owner"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />


        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            tools:layout_editor_absoluteX="11dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="100dp"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="#A8CBD1"
            android:text="Registrar Caballo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>